# linalg-self-edu

./: .gitignore  CMakeLists.txt  README.md
.git-hooks/: pre-commit  run_build.sh
src/: CMakeLists.txt  calc_test_data.py  customconcepts.hpp  exceptions.hpp
src/matrix/: CMakeLists.txt  aggregation.hpp  arithmetic.hpp  basicmatrixarithmetic.hpp  densematrixarithmetic.hpp  denserepresentation.hpp  eigendecomposition.hpp  inversion.hpp  matrix.cpp  matrix.hpp  matrix_factory.hpp  matrixinterface.hpp  multiplication.hpp  qr_decomposition.hpp  representatoinconcept.hpp  shapeutilities.hpp  svd_decomposition.hpp  transposition.hpp
src/python_test_data/: calc_test_data.ipynb  calc_test_data.py
test/: CMakeLists.txt  test_all.cpp  test_matrix.hpp
test/matrix_tests/: matrix_tests_utilities.hpp  test_eigendecomposition.hpp  test_matrix_aggregation.hpp  test_matrix_arithmetic.hpp  test_matrix_correctness.hpp  test_matrix_factory.hpp  test_matrix_inversion.hpp  test_matrix_multiplication.hpp  test_matrix_properties.hpp  test_matrix_shape_utilities.hpp  test_matrix_transposition.hpp  test_qr_decomposition.hpp  test_svd_decomposition.hpp
